Feat: Swagger for addLabel and deleteLabel
