# app/routes/user.routes.js
@@ -28,6 +28,6 @@ module.exports=(app) =>{
     app.put('/updateLabelByID/:labelId', helper.verifyToken, labelController.updateLabelById);
     app.delete('/deleteLabelById/:labelId', helper.verifyToken, labelController.deleteLabelById);
 
-    app.post('/addlabel/:noteId/:labelId', helper.verifyToken, noteController.addLabelById);
+    app.post('/addLabel/:noteId/:labelId', helper.verifyToken, noteController.addLabelById);
     app.post('/deleteLabel/:noteId/:labelId', helper.verifyToken, noteController.deleteLabel);
 }
